Fix SSE worker timeout issue - replace blocking sleep with non-blocking approach

--- a/templates/instructor.html
+++ b/templates/instructor.html
@@ -574,7 +574,7 @@
                     console.log('SSE connection established');
                     break;
                     
-                case 'heartbeat':
+                case 'keepalive':
                     // Keep connection alive
                     break;
             }
