--- a/templates/student.html
+++ b/templates/student.html
@@ -319,7 +319,7 @@
                     console.log('SSE connection established');
                     break;
                     
-                case 'heartbeat':
+                case 'keepalive':
                     // Keep connection alive
                     break;
             }
